# MagicRules

./: .env-example  .gitignore  README.md  pyproject.toml
backend/: config.py  database.py  embeddings.py  log_config.py  main.py  models.py  parser.py
backend/services/: answer_service.py  embedding_service.py  qa_service.py  retrieval_service.py
backend/tests/: conftest.py  test_answer_integration.py  test_answer_service.py  test_database.py  test_embeddings.py  test_error_handling.py  test_parser.py  test_qa_endpoint.py  test_retrieval.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AnswerDisplay.tsx  CitationCard.tsx  QuestionForm.tsx
frontend/src/hooks/: useQuestion.ts
frontend/src/tests/: AnswerDisplay.test.tsx  QuestionForm.test.tsx  api.test.ts
